--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
       // cleanly readable as a date (specifically, "June 30, 2015")
       let formatDatetime = d3.timeFormat("%A, %B %d, %Y");
 
-      // infer the date the bike data is describing based on the file name and
+      // infer the month the bike data is describing based on the file name and
       // store this as a set of useful variables
-      let bikeDataDateStr = csvFileName.substring(13, 23);
-      let bikeDataDate = parseDatetime(bikeDataDateStr + ' 00:00:00');
+      let bikeDataMonth = csvFileName.substring(18, 20); // e.g., "09"
+      let bikeDataDateStr = '2020-' + bikeDataMonth + '-01'; // set it to start of month
+      let bikeDataDatetimeStr = bikeDataDateStr + ' 00:00:00';
+      let bikeDataDate = parseDatetime(bikeDataDatetimeStr);
+
+      let monthNames = ["January", "February", "March", "April", "May", "June",
+        "July", "August", "September", "October", "November", "December"
+      ];
+      let bikeDataMonthName = monthNames[bikeDataDate.getMonth()];
 
       // set padding and spacing
       let chart_area_padding = {
@@ -44,8 +51,13 @@
         graph_height = chart_area_height - chart_area_padding.top - chart_area_padding.bottom;
 
       // set min and max values for axes
-      let x_val_min = parseDatetime(bikeDataDateStr + ' 0:00:00'),
-        x_val_max = parseDatetime(bikeDataDateStr + ' 23:59:59'),
+
+      let secondDay = new Date(); // variable for the second day of the month
+      secondDay.setTime(bikeDataDate);
+      secondDay.setDate(2);
+
+      let x_val_min = bikeDataDate,
+        x_val_max = secondDay,
         y_val_min = 0,
         y_val_max = 120;
 
@@ -211,9 +223,9 @@
     // generate a scatter plot for each sample of blue bike data (corresponding
     // to one day from each season)
     generateScatter("bluebikedata_2020-09-01.csv");
-    generateScatter("bluebikedata_2019-12-03.csv");
-    generateScatter("bluebikedata_2020-03-03.csv");
-    generateScatter("bluebikedata_2020-06-02.csv");
+    //generateScatter("bluebikedata_2019-12-03.csv");
+    //generateScatter("bluebikedata_2020-03-03.csv");
+    //generateScatter("bluebikedata_2020-06-02.csv");
   </script>
 </body>
 
