--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         .attr("x", (graph_width / 2) + chart_area_padding.left)
         .attr("y", 50)
         .attr("font-size", 11)
-        .text("(All  Rides in Boston, Cambridge, Brookline, Somerville on " + formatDatetime(bikeDataDate));
+        .text("(All  Rides in Boston, Cambridge, Brookline, Somerville in " + bikeDataMonthName);
 
       // add x-axis label
       chart_background.append("text")
