--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         .attr("x", (graph_width / 2) + chart_area_padding.left)
         .attr("y", 50)
         .attr("font-size", 11)
-        .text("(All  Rides in Boston, Cambridge, Brookline, Somerville in " + bikeDataMonthName + ")");
+        .text("(All  Rides in Boston, Cambridge, Brookline, Somerville for a Typical Day in " + bikeDataMonthName + ")");
 
       // add x-axis label
       chart_background.append("text")
