--- a/index.html
+++ b/index.html
@@ -228,11 +228,20 @@
 
     // generate a scatter plot for each sample of blue bike data (corresponding
     // to one day from each season)
-    //generateScatter("bluebikedata_2020-09-01.csv");
     generateScatter("201909-bluebikes-tripdata.csv");
-    //generateScatter("bluebikedata_2019-12-03.csv");
-    //generateScatter("bluebikedata_2020-03-03.csv");
-    //generateScatter("bluebikedata_2020-06-02.csv");
+
+    //    generateScatter("201901-bluebikes-tripdata.csv");
+    //    generateScatter("201902-bluebikes-tripdata.csv");
+    //    generateScatter("201903-bluebikes-tripdata.csv");
+    //    generateScatter("201904-bluebikes-tripdata.csv");
+    //    generateScatter("201905-bluebikes-tripdata.csv");
+    //    generateScatter("201906-bluebikes-tripdata.csv");
+    //    generateScatter("201907-bluebikes-tripdata.csv");
+    //    generateScatter("201908-bluebikes-tripdata.csv");
+    //    generateScatter("201909-bluebikes-tripdata.csv");
+    //    generateScatter("201910-bluebikes-tripdata.csv");
+    //    generateScatter("201911-bluebikes-tripdata.csv");
+    //    generateScatter("201912-bluebikes-tripdata.csv");
   </script>
 </body>
 
