--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
   <script>
     // function to generate a scatter plot, given the name of an accessible csv
-    // file with appropriately formatted data
+    // file with appropriately formatted data as well as a boolean variable of
+    // whether the scatterplot should animate
     function generateScatter(csvFileName, animate) {
 
       // define a parser for parsing csv columns representing datetimes (but
