gen all scatters

--- a/index.html
+++ b/index.html
@@ -235,20 +235,20 @@
 
     // generate a scatter plot for each sample of blue bike data (corresponding
     // to one day from each season)
-    generateScatter("201909-bluebikes-tripdata.csv", false);
+    generateScatter("201909-bluebikes-tripdata.csv", true);
 
-    //    generateScatter("201901-bluebikes-tripdata.csv", true);
-    //    generateScatter("201902-bluebikes-tripdata.csv", true);
-    //    generateScatter("201903-bluebikes-tripdata.csv", true);
-    //    generateScatter("201904-bluebikes-tripdata.csv", true);
-    //    generateScatter("201905-bluebikes-tripdata.csv", true);
-    //    generateScatter("201906-bluebikes-tripdata.csv", true);
-    //    generateScatter("201907-bluebikes-tripdata.csv", true);
-    //    generateScatter("201908-bluebikes-tripdata.csv", true);
-    //    generateScatter("201909-bluebikes-tripdata.csv", true);
-    //    generateScatter("201910-bluebikes-tripdata.csv", true);
-    //    generateScatter("201911-bluebikes-tripdata.csv", true);
-    //    generateScatter("201912-bluebikes-tripdata.csv", true);
+    generateScatter("201901-bluebikes-tripdata.csv", false);
+    generateScatter("201902-bluebikes-tripdata.csv", false);
+    generateScatter("201903-bluebikes-tripdata.csv", false);
+    generateScatter("201904-bluebikes-tripdata.csv", false);
+    generateScatter("201905-bluebikes-tripdata.csv", false);
+    generateScatter("201906-bluebikes-tripdata.csv", false);
+    generateScatter("201907-bluebikes-tripdata.csv", false);
+    generateScatter("201908-bluebikes-tripdata.csv", false);
+    generateScatter("201909-bluebikes-tripdata.csv", false);
+    generateScatter("201910-bluebikes-tripdata.csv", false);
+    generateScatter("201911-bluebikes-tripdata.csv", false);
+    generateScatter("201912-bluebikes-tripdata.csv", false);
   </script>
 </body>
 
