--- a/index.html
+++ b/index.html
@@ -78,15 +78,23 @@
         .attr("text-anchor", "middle")
         .attr("x", (graph_width / 2) + chart_area_padding.left)
         .attr("y", 30)
+        .attr("font-size", 17)
         .text("Bluebike Trip Duration By Time Of Day");
 
-      // add chart subtitle
+      // add chart subtitles
       chart_background.append("text")
         .attr("text-anchor", "middle")
         .attr("x", (graph_width / 2) + chart_area_padding.left)
         .attr("y", 50)
         .attr("font-size", 11)
-        .text("(All  Rides in Boston, Cambridge, Brookline, Somerville for a Typical Day in " + bikeDataMonthName + ")");
+        .text("All  Rides in Boston, Cambridge, Brookline, Somerville");
+
+      chart_background.append("text")
+        .attr("text-anchor", "middle")
+        .attr("x", (graph_width / 2) + chart_area_padding.left)
+        .attr("y", 66)
+        .attr("font-size", 11)
+        .text("For a Typical Day in " + bikeDataMonthName + ' ' + bikeDataYear + ")");
 
       // add x-axis label
       chart_background.append("text")
