--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
 
       // set padding and spacing
       let chart_area_padding = {
-          top: 80,
+          top: 90,
           right: 30,
           bottom: 70,
           left: 65
         },
 
+        titleAdjustLeft = 10,
         chart_area_width = 460,
         chart_area_height = 400,
         graph_width = chart_area_width - chart_area_padding.left - chart_area_padding.right,
@@ -76,7 +77,7 @@
       // add chart title
       chart_background.append("text")
         .attr("text-anchor", "middle")
-        .attr("x", (graph_width / 2) + chart_area_padding.left)
+        .attr("x", (graph_width / 2) + chart_area_padding.left - titleAdjustLeft)
         .attr("y", 30)
         .attr("font-size", 17)
         .text("Bluebike Trip Duration By Time Of Day");
@@ -84,17 +85,17 @@
       // add chart subtitles
       chart_background.append("text")
         .attr("text-anchor", "middle")
-        .attr("x", (graph_width / 2) + chart_area_padding.left)
+        .attr("x", (graph_width / 2) + chart_area_padding.left - titleAdjustLeft)
         .attr("y", 50)
         .attr("font-size", 11)
         .text("All  Rides in Boston, Cambridge, Brookline, Somerville");
 
       chart_background.append("text")
         .attr("text-anchor", "middle")
-        .attr("x", (graph_width / 2) + chart_area_padding.left)
+        .attr("x", (graph_width / 2) + chart_area_padding.left - titleAdjustLeft)
         .attr("y", 66)
         .attr("font-size", 11)
-        .text("For a Typical Day in " + bikeDataMonthName + ' ' + bikeDataYear + ")");
+        .text("For a Typical Day in " + bikeDataMonthName + ' ' + bikeDataYear);
 
       // add x-axis label
       chart_background.append("text")
