no gen oth graphs

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       generateScatter("201912-bluebikes-tripdata.csv", false);
     }
 
-    setTimeout(genRestOfScatters, 11000);
+    //setTimeout(genRestOfScatters, 11000);
   </script>
 </body>
 
