--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
   <title>Blue Bikes</title>
   <script src="https://d3js.org/d3.v6.js"></script>
 </head>
