add div for small multiples

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- div that will contain visualization -->
   <div id="main_chart_area"></div>
+  <div id="small_mult_chart_area"></div>
 
   <script>
     // function to generate a scatter plot, given the name of an accessible csv
