change var names

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         y_val_min = 0,
         y_val_max = 120;
 
-      let main_chart_area = d3.select("#main_chart_area")
+      let chart_area = d3.select("#main_chart_area")
 
       // add chart div
-      let chart = main_chart_area
+      let chart = chart_area
         .append("div")
         .attr("id", "chart")
 
