swap ordering vars

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     // function to generate a scatter plot, given the name of an accessible csv
     // file with appropriately formatted data as well as a boolean variable of
     // whether the scatterplot should animate
-    function generateScatter(chartAreaElem, csvFileName, animate) {
+    function generateScatter(csvFileName, chartAreaElem, animate) {
 
       // define a parser for parsing csv columns representing datetimes (but
       // formatted as strings) as the appropriate date objects
@@ -250,21 +250,21 @@
 
     // generate a scatter plot for each sample of blue bike data (corresponding
     // to one day from each season)
-    generateScatter("main_chart_area", "201909-bluebikes-tripdata.csv", true);
+    generateScatter("201909-bluebikes-tripdata.csv", "main_chart_area", true);
 
     function genRestOfScatters() {
-      generateScatter("main_chart_area", "201901-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201902-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201903-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201904-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201905-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201906-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201907-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201908-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201909-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201910-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201911-bluebikes-tripdata.csv", false);
-      generateScatter("main_chart_area", "201912-bluebikes-tripdata.csv", false);
+      generateScatter("201901-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201902-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201903-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201904-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201905-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201906-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201907-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201908-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201909-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201910-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201911-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201912-bluebikes-tripdata.csv", "main_chart_area", false);
     }
 
     //setTimeout(genRestOfScatters, 11000);
