make chart area elem var

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         y_val_min = 0,
         y_val_max = 120;
 
-      let chart_area = d3.select("#main_chart_area")
+      let chart_area = d3.select("#" + chartAreaElem)
 
       // add chart div
       let chart = chart_area
