change rest of charts to be put in small mult

--- a/index.html
+++ b/index.html
@@ -254,18 +254,18 @@
     generateScatter("201909-bluebikes-tripdata.csv", "main_chart_area", true);
 
     function genRestOfScatters() {
-      generateScatter("201901-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201902-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201903-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201904-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201905-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201906-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201907-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201908-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201909-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201910-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201911-bluebikes-tripdata.csv", "main_chart_area", false);
-      generateScatter("201912-bluebikes-tripdata.csv", "main_chart_area", false);
+      generateScatter("201901-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201902-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201903-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201904-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201905-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201906-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201907-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201908-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201909-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201910-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201911-bluebikes-tripdata.csv", "small_mult_chart_area", false);
+      generateScatter("201912-bluebikes-tripdata.csv", "small_mult_chart_area", false);
     }
 
     //setTimeout(genRestOfScatters, 11000);
