--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       generateScatter("201912-bluebikes-tripdata.csv", "small_mult_chart_area", false);
     }
 
-    //setTimeout(genRestOfScatters, 11000);
+    setTimeout(genRestOfScatters, 11000);
   </script>
 </body>
 
